--- a/TT-2016-B045/archivosTex/introduccion.tex
+++ b/TT-2016-B045/archivosTex/introduccion.tex
@@ -47,10 +47,8 @@ En 2018, el 53\% de los usuarios de internet con red doméstica usarán servicio
 
 Una de las principales razones del incremento en el tamaño en la estructura de almacenamiento de servicios en linea es la duplicación de archivos por varios y diferentes usuarios, existen muchas copias en la nube de un mismo archivo que se encuentra presente en diferentes cuentas de usuarios. Por ejemplo \textbf{\textit{n}}cantidad de  usuarios pueden subir la misma canción a la nube, por lo tanto esta se encuentra almacenada en las \textbf{\textit{n}} cantidad de cuentas que tiene registro la nube, esta misma canción que se encuentra almacenada está cubriendo un espacio en la memoria del servicio, si se tuviera una sóla copia almacenada de esta canción se ahorraría mucho espacio en la nube que podría utilizarse para el aalmacenamiento de un archivo diferente . Según un estudio ~\cite{popa} realizado por HP se estima que hay 1 Exabyte de datos almacenados en la nube, además de 2012 a 2017, las cargas de trabajo de los centros de datos crecerán 2.3 veces, mientras que en la nube aumentarán 3.7 veces, lo cual implica que el Exabyte que se estima se podría llegar a triplicar y las empresas que proporcionan estos servicios disminuyen su oferta en el mercado. 
 \\ 
-Otro punto importante 
-%Sumado al agraviante problema de crecimiento en la estructura de almacenamiento en línea, existe un elemento que pocas organizaciones y usuarios contemplan para el almacenamiento de su información, y es la seguridad. Las plataformas que ahora ofrecen el servicio de almacenamiento en la nube, no contemplan la protección e integridad de la información, este servicio está sujeto a los ataques de adversarios que están interesados en el robo, manipulación o alteración de la información importante para los usuarios. Dicho servicio carece de algún esquema de seguridad y por tanto no se puede garantizar la permanencia de los usuarios en el consumo del servicio en la plataforma de almacenamiento. 
-%Dejar sin resolver la seguridad de la infofrmación, puede generar negativas consecuenicias hacia cualquier usuario de la plataforma de almacencamiento, cualquier individuo que tenga acceso a los archivos almacenados en ésta plataforma, podrá visualizar el contenido de estos, comprometiendo la fidelidad e integridad de la información para poder usarla en situaciones que pudieran llegar a perjudicar al usuario. 
-\\
+Otro punto importante es la seguridad e integridad de la gran cantidad de información que se almacena en la nube.  Este servicio de almacenamiento está sujeto a los ataques de adversarios que están interesados en el robo, manipulación o alteración de la información importante para los usuarios, el ataque que hasta ahora a sido intentado por estos adversarios es el \textbf{ataque por fuerza bruta}. Dicho ataque funciona de la siguiente manera, Otros sistemas proponen una solución para evitar las duplicaciones en la nube, la solución fue el realizar una función al archivo que se quería almacenar y el resultado de esa función se convertía en una llave para poder cifrar el archivo y de esta manera quedaba seguro, sin embargo los adversarios siempre están en busca de corromper sistema de seguridad para intervenir el canal donde se comparte la información, si dicho adversario tenía la más mínima noción de cuál era el contenido del archivo que se intentó almacenar, este adversario podía estar intentando descifrar con lo poco que sabe de ese archivo almacenado  ya que el mismo archivo se convertía en la llave que lo protegóa, entonces el adversario realizaba ese proceso con todos los archivos registrados hasta que dicha llave coincidia con algún archivo almacenado y de esa manera logra corromper el esquema de seguridad que se había implementado para la protección de archivos sin ducplicaciones. 
+ 
 
 \section{Estado del Arte}
 \begin{tabular}{ |p{3cm}|p{2.5cm}|p{2.5cm}|p{2.5cm}|p{2.5cm}|p{2.5cm}|p{2.5cm}| }
