--- a/TT-2016-B045/archivosTex/preliminares.tex
+++ b/TT-2016-B045/archivosTex/preliminares.tex
@@ -371,12 +371,15 @@ Este modelo de cómputo nube se compone de 5 características esenciales, 3 mode
 
 
  \textbf{Modelos de servicio. }
-
+Entre los diversos tipos de servicios de cómputo en la nube proporcionados internamente o por proveedores de servicios de terceros, los más habituales son:
 \begin{itemize}
 	\item \textbf {Software como Servicio (SaaS). } \\ La capacidad proporcionada al consumidor es utilizar las aplicaciones del proveedor que se ejecutan en una infraestructura en la nube. Las aplicaciones son accesibles desde varios dispositivos cliente a través de una interfaz de cliente ligero, como un navegador web (por ejemplo, correo electrónico basado en web) o una interfaz de programa. El consumidor no gestiona ni controla la infraestructura oculta de la nube, incluyendo la red, los servidores, los sistemas operativos, el almacenamiento o incluso las capacidades de las aplicaciones individuales, con la posible excepción de las limitadas configuraciones específicas de la configuración de la aplicación.
-	\item \textbf {Plataforma como Servicio (PaaS). } \\ La capacidad proporcionada al consumidor es desplegar en la infraestructura de la nube aplicaciones creadas por el consumidor, utilizando lenguajes de programación, bibliotecas, servicios y herramientas soportadas por el proveedor. El consumidor no gestiona ni controla la infraestructura oculta de la nube, incluyendo la red, los servidores , sistemas operativos o de almacenamiento, pero tiene control sobre las aplicaciones desplegadas y, posiblemente, configuración de configuración para el entorno de alojamiento de aplicaciones.
-	\item \textbf {Infraestructura como Servicio (IaaS). } \\  La capacidad proporcionada al consumidor es proveer procesamiento, almacenamiento, redes y otros recursos de computación fundamentales donde el consumidor es capaz de desplegar y ejecutar software arbitrario, que puede incluir sistemas operativos y aplicaciones. El consumidor no gestiona ni controla la infraestructura subyacente de la nube, sino que tiene control sobre los sistemas operativos, el almacenamiento y las aplicaciones implementadas; Y posiblemente un control limitado de componentes de red selectos (por ejemplo, firewalls de host). 
+	\item \textbf {Plataforma como Servicio (PaaS). } 
+	\item \textbf {Infraestructura como Servicio (IaaS). } 
 \end{itemize}  
+
+Explicado a grandes rasgos el software como servicio, ya que es donde se centrará todo el desarrollo de este protocolo.
+
 
 
 
