--- a/TT-2016-B045/archivosTex/analisis.tex
+++ b/TT-2016-B045/archivosTex/analisis.tex
@@ -188,6 +188,13 @@ R9 & Sobre estimación de insumos & MEDIA & MEDIA & MODERADO & Los insumos para 
 
 \begin{figure}[H]
 \centering
+	\includegraphics[width=16cm, height=11cm]{./images/Arqui.jpg}
+	\caption{Arquitectura general del sistema.}
+
+\end{figure}
+
+\begin{figure}[H]
+\centering
 	\includegraphics[width=16cm, height=11cm]{./images/Paso01.jpg}
 	\caption{Arquitectura del sistema paso 1.}
 
